# pyms-agilent

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.ci/: copy_pypi_2_github.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
agilent_worklist_parser/: __init__.py  classes.py  columns.py  enums.py  parser.py  tuples.py  utils.py
doc-source/: Building.rst  Source.rst  chemistry.py  clr.py  conf.py  contributing.rst  docs.rst  index.rst  wikipedia.py
doc-source/Agilent/MassSpectrometry/: DataAnalysis.py
doc-source/api/: enums.rst  exceptions.rst  metadata.rst  utils.rst
doc-source/api/mhdac/: chromatograms.rst  file_information.rst  index.rst  mass_spec_data_reader.rst  ms_scan_file_info.rst  scan_record.rst  signal.rst  signalinfo.rst  spectrum.rst
doc-source/api/xml_parser/: acq_method.rst  contents.rst  core.rst  default_mass_cal.rst  device_config_info.rst  devices.rst  enums.rst  index.rst  ms_actual_defs.rst  ms_time_segments.rst  sample_info.rst
pyms_agilent/: __init__.py  attrs_serde.py  data_reader.py  enums.py  exceptions.py  metadata.py  reader.py  utils.py
pyms_agilent/mhdac/: __init__.py  _posix_data_analysis.py  agilent.py  chromatograms.py  file_information.py  install.py  mass_spec_data_reader.py  ms_scan_file_info.py  scan_record.py  signal.py  signalinfo.py  spectrum.py
pyms_agilent/xml_parser/: AcqMethod.py  Contents.py  DefaultMassCal.py  DeviceConfigInfo.py  Devices.py  MSActualDefs.py  MSTS.py  __init__.py  acq_method.py  contents.py  core.py  default_mass_cal.py  device_config_info.py  devices.py  enums.py  ms_actual_defs.py  ms_time_segments.py  sample_info.py
pyms_agilent/xml_parser/agilent_xsd/: Contents.xsd  DefaultMassCal.xsd  Devices.xsd  MSTS.xsd  __init__.py  sample_info.xsd
tests/: conftest.py  requirements.txt  test_acqmethod.py  test_contents.py  test_default_mass_cal.py  test_device_config_info.py  test_devices.py  test_exceptions.py  test_metadata.py  test_ms_actual_defs.py  test_msts.py  test_reader.py  test_sample_info.py
tests/MJA5_1000_090919_001.d/AcqData/: AcqMethod.xml  Contents.xml  DefaultMassCal.xml  DeviceConfigInfo.xml  Devices.xml  HiP-ALS1.cd  HiP-ALS1.cg  MSTS.xml  TCC1.cd  (+7 more)
tests/test_mhdac/: __init__.py  conftest.py  test_data_reader.py  test_file_information.py  test_instrument_curves.py  test_spectrum.py  test_tic.py
tests/test_reader/: test_scan_list_180_.yml  test_scan_list_18_.yml  test_scan_list_1_.yml  test_scan_list_27_.yml  test_scan_list_36_.yml  test_scan_list_9_.yml  test_time_list.yml
tests/test_reader_/: test_scan_list_360_.yml  test_scan_list_3_.yml  test_scan_list_45_.yml  test_scan_list_5_.yml  test_scan_list_7_.yml  test_scan_list_90_.yml  test_tic.yml  test_time_list.yml
(+69 files in other folders)
