[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pyms-agilent"
version = "0.1.2"
description = "PyMassSpec interface to Agilent .d datafiles"
readme = "README.rst"
keywords = [ "chemistry", "chromatography", "mass-spectrometry",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/PyMassSpec/pyms-agilent"
"Issue Tracker" = "https://github.com/PyMassSpec/pyms-agilent/issues"
"Source Code" = "https://github.com/PyMassSpec/pyms-agilent"
Documentation = "https://pyms-agilent.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
package = "pyms_agilent"
additional-files = [
    "recursive-include pyms_agilent/xml_parser/agilent_xsd *.xsd",
    "include pyms_agilent/mhdac/mhdac.zip",
]

[tool.dep_checker]
allowed_unused = [ "pythonnet", "cftime",]

[tool.mkrecipe]
conda-channels = [ "PyMassSpec",]
extras = "all"

[tool.dep_checker.name_mapping]
pymassspec = "pyms"
attrs = "attr"
